# GaiaAutoencoderPoster

./: README.md  pyproject.toml  requirements.txt
data/: AE_dmdt_K5_beta1e-05_decvarFalse_seed1234_radamTrue_lr0.001_bs64.ckpt  AE_fold_K5_beta0.0001_decvarTrue_seed1234_radamTrue_lr0.001_bs64.ckpt  AE_xp_K5_beta0.001_decvarFalse_seed1234_radamTrue_lr0.001_bs64.ckpt  MMAE_pumap_K17_hd128_seed1234_radamTrue_lr0.001_bs128.ckpt  dmdt_model_config.json  fold_model_config.json  latent_vars_plus_metadata_pumap.parquet  pumap_model_config.json  xp_model_config.json
src/: dataset.py  dmdt.py  folding.py  lc.py  multimodal.py  plots.py  poster.py  pumap.py  rvs.py  shared.py  stats.py  text_blocks.py  training.py  xp.py
