[project]
name = "gaia-poster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "astroquery>=0.4.11",
    "datashader>=0.18.2",
    "gaiaxpy>=2.1.3",
    "holoviews>=1.22.0",
    "jupyter>=1.1.1",
    "panel>=1.8.4",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
